@@ -1,5 +1,15 @@
 2005-12-05  Johan Dahlin  <jdahlin@async.com.br>
 
+	* kiwi/datatypes.py (converter): New baseclass
+	(BaseDateTimeConverter): New baseclass for datetime.*
+	(DateTimeConverter):
+	(TimeConverter): New converters 
+
+	* kiwi/ui/widgets/list.py
+	(List):	Use datatype converter to convert to and from strings.
+	Add some optimizations, save the converter instance and send it as an argument
+	to the callbacks.
+	
 	* kiwi/ui/widgets/list.py (List.select_paths): New method, selects
 	a list of paths.
 
